<resources>
    <string name="app_name">Movies</string>
    <string name="action_logout">Sair do perfil</string>
    <string name="action_watch_list">Lista para assistir</string>
    <string name="title_activity_login">Entar</string>
    <string name="title_activity_movies">Filmes</string>
    <string name="facebook_app_id">631288837667607</string>
    <string name="fb_login_protocol_scheme">fb631288837667607</string>
    <string name="title_activity_movies_popular">Filmes Populares</string>
    <string name="title_activity_register">Registrar</string>
    <string name="title_activity_favorites">Favoritos</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="login_failed">"Login failed!"</string>
    <string name="name">Nome</string>
    <string name="birth">Data de nascimento</string>
    <string name="register">Registrar</string>
    <string name="create_account">Criar conta</string>
    <string name="default_notification_channel_id">favoritemovie</string>
    <string name="notification_title">Favorite Movie</string>
    <string name="notification_text">We have new movies for you!</string>
    <string name="notification_ok">OK!</string>
    <string name="moved_movie">"Movido para assistidos - %s</string>
    <string name="added_movie">"Movie added - %s</string>
    <string name="login">Entrar</string>
    <string name="continue_with_google">Continuar com Google</string>
    <string name="continue_with_facebook">Continuar com Facebook</string>
    <string name="have_account">Já tem conta ?</string>
    <string name="dont_have_account">Ainda não tem conta ?</string>
    <string name="profile_text">Perfis</string>
    <string name="search_menu">Buscar</string>
    <string name="buscar">buscar</string>
    <string name="action_watched">Filmes Assistidos</string>

</resources>