<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_watched"
        android:icon="@drawable/ic_list_confirm"
        android:orderInCategory="100"
        android:title="@string/action_watch_list"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_favorite_white"
        android:orderInCategory="100"
        android:title="@string/action_watch_list"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:orderInCategory="100"
        android:title="@string/search_menu"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_exit_to_app_white"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>